chnage the picture url

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background: black;">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto text-center">
-                <h1 class="mb-3">Profile Scroller</h1>
+                <h1 class="main">Profile Scroller</h1>
                 <div id="imageDisplay"></div>
                 <br>
                 <div id="profileDisplay"></div>
